# pydantic-mypy

./: pyproject.toml
mypy_pydantic/: model.py
